# llm-inference-benchmark

./: .gitignore  LICENSE  README.md  prompt-1-inference-benchmark.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  comparisons.py  pareto.py  plots.py  report.py
benchmark/: __init__.py  profiler.py  runner.py  workloads.py
configs/: benchmark_config.yaml  hardware_profiles.yaml  models.yaml
metrics/: __init__.py  cost.py  latency.py  memory.py  quality.py  throughput.py
notebooks/: 01_quickstart.ipynb  02_speculative_decoding_analysis.ipynb  03_quantization_tradeoffs.ipynb  04_kv_cache_deep_dive.ipynb  05_cost_optimization.ipynb
scripts/: __init__.py  compare_strategies.py  generate_report.py  run_benchmark.py  run_single_strategy.py
serving/: __init__.py  base.py  hf_backend.py  tgi_backend.py  vllm_backend.py
strategies/: __init__.py  attention.py  base.py  batching.py  kv_cache.py  parallel.py  quantization.py  speculative_decoding.py
tests/: __init__.py  test_metrics.py  test_profiler.py  test_strategies.py  test_workloads.py
